fix: apk is community.general
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/playbooks/vmboot.yaml
+++ b/playbooks/vmboot.yaml
@@ -73,13 +73,13 @@
 
     - name: Upgrade packages (Alpine)
       when: ansible_facts.os_family == "Alpine"
-      ansible.builtin.apk:
+      community.general.apk:
         update_cache: yes
         upgrade: yes
 
     - name: Ensure cron is installed (Alpine)
       when: ansible_facts.os_family == "Alpine"
-      ansible.builtin.apk:
+      community.general.apk:
         name:
           - dcron
         state: present
